# TIN-RemoTest

./: .gitignore  CMakeLists.txt  README.md  main.cpp  remoTest.lua  skrypt.sh
Agent/: Agent  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
Agent/include/: agent.h  remoTestMessage.h  tcp_server.h
Agent/src/: agent.cpp  main.cpp  remoTestMessage.cpp  tcp_server.cpp
Nadzorca/: .gitignore  CMakeLists.txt  Makefile  Nadzorca  cmake_install.cmake  hosts.txt  main.cpp  readme.txt
Nadzorca/include/: FileParser.h  nadzorca.h  remoTestMessage.h  tcp_client.h
Nadzorca/src/: FileParser.cpp  main.cpp  nadzorca.cpp  remoTestMessage.cpp  tcp_client.cpp
include/: FileParser.hpp  agent.h  nadzorca.h  remoTestMessage.h  tcp-client.cpp  tcp-server.cpp  tcp-server.h  tcp_client.h  tcp_server.h
include/agent/: agent.h  agent_controller.h
include/communication/: tcp_server.h
include/controller/: controller.h  event_queue.hpp  events.h  timer.h  timer.hpp
include/model/: agent_model.h  executioner.h
include/utils/: lock.hpp  scoped_lock.hpp  thread.hpp
src/: FileParser.cpp  agent.cpp  nadzorca.cpp  remoTestMessage.cpp  remoTestMessage.h  tcp_client.cpp  tcp_server.cpp
src/agent/: agent.cpp  agent_controller.cpp
src/communication/: tcp_server.cpp
src/controller/: controller.cpp  events.cpp  timer.cpp
src/model/: agent_model.cpp  executioner.cpp
src/utils/: thread.cpp
